fixed landscope mode on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@ html {
         200%,
         200%;
     background-color: hsla(225, 46%, 65%, 0.877);
-    height: 100vh;
+    height: auto;
+    min-height: auto;
     width: 100vw;
     font-family: 'Red Hat Display', sans-serif;
 }
 body {
-    margin: 0;
+    margin: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -160,6 +161,7 @@ button:hover {
     and (max-width : 400px) 
 {
     html {
+        display: flex;
         align-items: flex-start;
     }
     .card {
